# open-steward

./: .gitattributes  .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml  sample_config.csv
backend/app/: cli.py  main.py
backend/app/adapters/: base.py  csv_adapter.py  data_source.py  database_data_source.py  dbt_manifest_adapter.py  duckdb_aggregate_source.py  local_file_data_source.py
backend/app/api/: deps.py
backend/app/models/: column_info.py  finding.py  job_statistics.py  pipeline_job.py  table_profile.py
backend/app/schemas/: graph_schema.py  profile_schema.py
backend/app/services/: dq_profiler.py  etl_statistics.py  filter_analyzer.py  finding_detector.py  graph_builder.py  join_analyzer.py  join_statistics.py  reconciliation_engine.py  sql_analyzer.py
backend/app/tests/: test_api.py  test_cli.py  test_config_env.py  test_csv_adapter.py  test_database_data_source.py  test_dbt_manifest_adapter.py  test_dq_profiler.py  test_etl_statistics.py  test_filter_analyzer.py  test_finding_detector.py  test_graph_builder.py  test_integration.py  test_join_analyzer.py  test_join_statistics.py  test_local_file_data_source.py  test_reconciliation_engine.py  test_sql_analyzer.py  test_ui_serving.py
backend/demo_data/raw/: customers.csv  orders.csv
backend/demo_data/showcase_mart/: orders_customer_surplus.csv  orders_customers_inner.csv  orders_customers_loss.csv  orders_promos_left.csv  products_promos_left.csv
backend/samples/: bad_schema.csv  cycle_config.csv  dbt_manifest_sample.json  demo_config.csv  showcase_config.csv
(+64 files in other folders)
